# Barebones-Reverse-Proxy

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.txt  proxy.conf  proxy.conf.example
.github/workflows/: ci.yml  integration-tests.yml
docs/: architecture.md  event_loop.md  security.md  workers.md
scripts/: barebones-reverse-proxy.service  deploy.sh
src/: config.rs  error.rs  lib.rs  log.rs  main.rs  parser.rs  proxy.rs  proxy_protocol.rs  router.rs  runtime_config.rs  server.rs  tls.rs  worker.rs
src/utils/: mod.rs
tests/: integration.rs
tests/integration/: conftest.py  test_headers.py  test_methods.py  test_query_strings.py  test_reload.py  test_responses.py  test_routing.py  test_security.py  test_upgrade.py  test_upstream_failure.py  test_utils.py
