[package]
name = "barebones_reverse_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["http1", "http2", "server"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = ["http1", "http2", "ring", "rustls-native-certs", "webpki-tokio"] }
hyper-util = { version = "0.1.20", features = ["tokio", "client-legacy", "http1", "http2", "server-auto"] }
rustls = { version = "0.23.37", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.2.0"
socket2 = { version = "0.6.3", features = ["all"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12"] }
